--- a/app.json
+++ b/app.json
@@ -12,12 +12,6 @@
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
-      },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
@@ -38,6 +32,18 @@
           "dark": {
             "backgroundColor": "#000000"
           }
+        }
+      ],
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "./assets/fonts/dm_sans.ttf",
+            "./assets/fonts/garamond.ttf",
+            "./assets/fonts/inter.ttf",
+            "./assets/fonts/oswald.ttf",
+            "./assets/fonts/urbanist.ttf"
+          ]
         }
       ]
     ],
