--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native": "0.81.4",
     "react-native-fast-range-slider": "^0.4.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-phone-entry": "^0.2.4",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.16.0",
