fix: correct expo plugin configuration structure

--- a/app.json
+++ b/app.json
@@ -23,6 +23,12 @@
     "plugins": [
       "expo-router",
       [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you add them to your properties."
+        }
+      ],
+      [
         "expo-splash-screen",
         {
           "image": "./assets/images/icon.png",
