--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.2.2",
+    "@phosphor-icons/react": "^2.1.10",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.4.5",
-    "@react-native-community/slider": "^5.0.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.4.9",
     "@supabase/supabase-js": "^2.81.1",
     "expo": "~54.0.10",
+    "expo-av": "~16.0.7",
     "expo-blur": "^15.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
@@ -40,9 +41,9 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
-    "lucide-react": "^0.544.0",
     "lucide-react-native": "^0.544.0",
     "nativewind": "^4.2.1",
+    "phosphor-react-native": "^3.0.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
