refactor: update Phosphor icons notation and UI polish across multiple screens

--- a/app.json
+++ b/app.json
@@ -51,7 +51,8 @@
             "./assets/fonts/urbanist.ttf"
           ]
         }
-      ]
+      ],
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true,
