--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/stack": "^7.4.9",
     "@supabase/supabase-js": "^2.81.1",
     "expo": "~54.0.10",
+    "expo-auth-session": "^7.0.10",
     "expo-av": "~16.0.7",
     "expo-blur": "^15.0.7",
     "expo-constants": "~18.0.9",
@@ -40,7 +41,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
+    "expo-web-browser": "~15.0.10",
     "lucide-react-native": "^0.544.0",
     "nativewind": "^4.2.1",
     "phosphor-react-native": "^3.0.2",
@@ -50,11 +51,11 @@
     "react-native": "0.81.4",
     "react-native-fast-range-slider": "^0.4.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-phone-entry": "^0.2.4",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.13.0",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "^0.5.1",
     "svix": "^1.81.0",
