--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.4.9",
     "@supabase/supabase-js": "^2.81.1",
+    "clsx": "^2.1.1",
     "expo": "~54.0.10",
     "expo-auth-session": "^7.0.10",
     "expo-av": "~16.0.7",
     "expo-blur": "^15.0.7",
-    "expo-constants": "~18.0.9",
+    "expo-constants": "~18.0.13",
+    "expo-device": "~8.0.10",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
@@ -35,6 +37,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.16",
     "expo-router": "~6.0.8",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -59,6 +62,7 @@
     "react-native-web": "~0.21.0",
     "react-native-worklets": "^0.5.1",
     "svix": "^1.81.0",
+    "tailwind-merge": "^3.4.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
