Update onboarding and auth screens UI
- Enhance onboarding screen with immersive image and better spacing
- Improve sign-up screen layout and align SSO buttons
- Update user type selection screen spacing for better accessibility
- Include various other project updates

--- a/app.json
+++ b/app.json
@@ -13,7 +13,10 @@
     },
     "android": {
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "output": "static",
@@ -58,6 +61,13 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "10bc3aa3-8663-4af9-b726-e70556a0d76e"
+      }
+    },
+    "owner": "salift_roogo"
   }
 }
