--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@phosphor-icons/react": "^2.1.10",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -37,6 +38,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-location": "^19.0.8",
     "expo-notifications": "~0.32.16",
     "expo-router": "~6.0.8",
     "expo-secure-store": "^15.0.7",
