--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@supabase/supabase-js": "^2.81.1",
     "clsx": "^2.1.1",
     "expo": "~54.0.10",
+    "expo-application": "~7.0.8",
     "expo-auth-session": "^7.0.10",
     "expo-av": "~16.0.7",
     "expo-blur": "^15.0.7",
     "expo-constants": "~18.0.13",
     "expo-device": "~8.0.10",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
@@ -38,6 +40,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-localization": "~17.0.8",
     "expo-location": "^19.0.8",
     "expo-notifications": "~0.32.16",
     "expo-router": "~6.0.8",
@@ -49,6 +52,8 @@
     "expo-web-browser": "~15.0.10",
     "nativewind": "^4.2.1",
     "phosphor-react-native": "^3.0.2",
+    "posthog-react-native": "^4.19.0",
+    "posthog-react-native-session-replay": "^1.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
