Fix inconsistent file casing and update dependencies
- Rename red_villa.JPG/white_villa.JPG to .jpg to match filesystem
- Regenerate package-lock.json to resolve yaml version mismatch
- Add expo-dev-client and update lockfile

--- a/app.json
+++ b/app.json
@@ -16,7 +16,8 @@
       "predictiveBackGestureEnabled": false,
       "permissions": [
         "android.permission.RECORD_AUDIO"
-      ]
+      ],
+      "package": "com.salift_roogo.roogo"
     },
     "web": {
       "output": "static",
@@ -56,7 +57,8 @@
         }
       ],
       "expo-web-browser",
-      "expo-notifications"
+      "expo-notifications",
+      "expo-localization"
     ],
     "experiments": {
       "typedRoutes": true,
