chore: project configuration updates and maintenance
- Add development-simulator profile to eas.json
- Update tsconfig paths for expo-notifications
- Remove .npmrc
- Update .gitignore
- Add google-services.json and testing checklist

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "lib": ["dom", "esnext"],
     "jsx": "react-native",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "expo-notifications": ["./node_modules/expo-notifications"]
     }
   },
   "include": [
